<resources>
    <string name="app_name">DotPainter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="set_width">Set Width</string>
    <string name="set_color">Set Color</string>
    <string name="title_activity_set_width_dialog">SetWidthDialogActivity</string>
    <string name="Cancel">Cancel</string>
    <string name="Okay">OK</string>
    <string name="clear">Clear Screen</string>
    <string name="title_activity_set_color_dialog">SetColorDialogActivity</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>

</resources>
