<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.elon.dotpainter.SetColorDialogActivity">


    <TextView
        android:id="@+id/alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"/>

    <SeekBar
        android:id="@+id/seekbaralpha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/alpha"
        android:layout_toEndOf="@+id/alpha"
        android:max="255" />

    <TextView
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:layout_below="@+id/alpha"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/seekbarblue" />

    <SeekBar
        android:id="@+id/seekbarred"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/red"
        android:layout_toEndOf="@+id/alpha"
        android:max="255" />

    <TextView
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:layout_below="@+id/red"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/seekbarblue"/>

    <SeekBar
        android:id="@+id/seekbargreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/green"
        android:layout_toEndOf="@+id/alpha"
        android:max="255" />

    <TextView
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:layout_below="@+id/green"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/seekbarblue"/>

    <SeekBar
        android:id="@+id/seekbarblue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/blue"
        android:layout_toEndOf="@+id/alpha"
        android:max="255" />

    <ImageView
        android:id="@+id/colorImageView"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/blue"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_color"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:id="@+id/setcolorbutton"
        android:onClick="onSetColorClick" />

</RelativeLayout>
